public/lite/api/zh-CN/r1.8/_sources/generate/program_listing_file_include_runtime_include_api_model_parallel_runner.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_runtime_include_api_model_parallel_runner.h:

Program Listing for File model_parallel_runner.h
================================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_runtime_include_api_model_parallel_runner.h>` (``include/runtime/include/api/model_parallel_runner.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_INCLUDE_API_MODEL_PARALLEL_RUNNER_H
   #define MINDSPORE_INCLUDE_API_MODEL_PARALLEL_RUNNER_H
   #include <vector>
   #include <memory>
   #include <utility>
   #include <map>
   #include <string>
   #include "include/api/status.h"
   #include "include/api/context.h"
   namespace mindspore {
   class RunnerConfig {
    public:
     struct Data;
     RunnerConfig();
     ~RunnerConfig() = default;
   
     void SetWorkersNum(int32_t workers_num);
   
     void SetContext(const std::shared_ptr<Context> &context);
   
     void SetConfigInfo(const std::string &section, const std::map<std::string, std::string> &config);
   
     std::map<std::string, std::map<std::string, std::string>> GetConfigInfo() const;
   
     int32_t GetWorkersNum() const;
   
     std::shared_ptr<Context> GetContext() const;
   
    private:
     std::shared_ptr<Data> data_ = nullptr;
   };
   
   class ModelPool;
   
   class MS_API ModelParallelRunner {
    public:
     ModelParallelRunner() = default;
     ~ModelParallelRunner() = default;
   
     Status Init(const std::string &model_path, const std::shared_ptr<RunnerConfig> &runner_config = nullptr);
   
     std::vector<MSTensor> GetInputs();
   
     std::vector<MSTensor> GetOutputs();
   
     Status Predict(const std::vector<MSTensor> &inputs, std::vector<MSTensor> *outputs,
                    const MSKernelCallBack &before = nullptr, const MSKernelCallBack &after = nullptr);
   
    private:
     std::shared_ptr<ModelPool> model_pool_ = nullptr;
   };
   }  // namespace mindspore
   #endif  // MINDSPORE_INCLUDE_API_MODEL_PARALLEL_RUNNER_H
